Starting to add arbitrary code execution to JSON protocol